--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "eslint": "^8.40.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prisma": "^4.14.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.1",
     "@prisma/client": "^4.14.0",
-    "fastify": "^4.17.0"
+    "fastify": "^4.17.0",
+    "zod": "^3.21.4"
   }
 }
