--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jwt-decode": "^3.1.2",
@@ -28,7 +29,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/js-cookie": "^3.0.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "js-cookie": "^3.0.5",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
